syntax = "proto2";
option optimize_for = LITE_RUNTIME;
import "EnumDefine.proto"; 



message CameraInfo
{
	optional  uint32 index = 1;  // 拼接索引
	optional  uint32 camera_id = 2; // 相机id
	optional  string address = 3; //相机的地址
	optional  string camera_name = 4; // 相机的名称
	optional  uint32 port 	= 5; //相机的端口 
	optional  string url    = 6; //媒体流 
	optional  ECameraStatusType   state = 7; // 状态
 
	
}


message CameraGroup
{
	optional uint32 index = 1; //拼接索引
	optional uint32 camera_id = 2; //相机id
	optional double x = 3; // 
	optional double y = 4;
	optional double w = 5;
	optional double h = 6;
}






message PageInfo
{
	optional uint32 	page_size = 1;//每页显示多少数据
	optional uint32 	page_number = 2; //当前页码
	optional uint32 	total_pages = 3; //总页码
	optional uint32 	total_elements = 4; //总数量
}



message  OsdInfo
{
	optional double 		x = 1;
	optional double 		y = 2;
	optional uint32 		font_size = 3; //字体的大小
	optional string 		font_text = 4; //数据
}

